Refactorings + added tracker table that will track for each timeframe how many collected documents we have. Added branch in logic - if all are processed - start collecting for the next date, else - collect the rest of the documents and then jump to next date